--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,42 +1,19 @@
-## => Builder Stage
+# Builder
 FROM node:18-slim AS builder
 
 WORKDIR /app
-
 COPY package*.json ./
-
 RUN npm install
-
 COPY . .
-
 RUN npm run build
 
-## => Production Stage
+# Runner
 FROM node:18-slim AS runner
 
 WORKDIR /app
-
-COPY package*.json ./
-
-RUN npm install --only=production
-
 COPY --from=builder /app/dist ./dist
-
+COPY --from=builder /app/package.json ./
+RUN npm install --omit=dev
+ENV NODE_ENV=production
 EXPOSE 3000
-
-CMD ["npm", "run", "start"]
-
-
-# FROM node:18-slim
-
-# WORKDIR /app
-
-# COPY package*.json ./
-
-# RUN npm i
-
-# COPY . .
-
-# EXPOSE 3000
-
-# CMD ["npm", "run start"]
+CMD ["node", "dist/index.js"]
